week2: realtime chat + change function flow

--- a/ProRandomChat/pom.xml
+++ b/ProRandomChat/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.prorandomchata/com.example.prorandomchata.HelloApplication
+                            <mainClass>com.example.prorandomchata/com.example.prorandomchata.AppStarter
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
